--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
 												<img src="images/Me_2.jpg" />
 											</span>
 										</div>
-										<p><b>An analytical and a problem-solving mindset. Have a strong foundation in math and logic. Approach towards tasks is methodical and target-oriented. Skilled in Python programming.</b></p>
+										<p><b>Analytical and problem-solving mindset.
+											Strong foundation on logic.
+											Open to challenges and dealing with new
+											technologies. Target oriented and methodical.</b></p>
 										<ul class="actions">
-											<li><a href="Final_Resume1.pdf" class="button big">View My Resume</a></li>
+											<li><a href="My_Resume.pdf" class="button big">View My Resume</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -98,34 +101,65 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a class="image"><img src="images/shop.jpg" alt="" /></a>
-											<h3>E-Commerce Store<br> (Started Jan’2020, Ongoing)</h3>
-											<p>End-to-end e-commerce store using the MERN Stack architecture involving the task of web scraping, including a user login system and a payment gateway.</p>
-											<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>TECHNOLOGIES: Web Scraping, Django, Python, MongoDB, HTML, CSS
-												<br>LABELS: Team Work, Research, Open to Challenges</p>
+											<a class="image"><img src="images/chatbot.jpg" alt="" /></a>
+											<h3>Chatbot for Career Counselling Company, Admizzionz Campuz®<br>(Aug’2019 – Aug'2020)<br><br>
+												COMPETITION WINNER - 1<sup>ST</sup> POSITION</h3>
+											<p>Designed and developed a chatbot solution for a career counselling portal / company
+												(Admizzionz Campuz®). The same is successfully <b style="color:rgb(16, 125, 139)">deployed in live production</b>.<br>
+												<B style="color:rgb(16, 125, 139)">SCOPE -</B> Functional and technical requirements, system design document, full stack
+												development, testing and deployment.<br><br>
+												Declared winners among the final 10 participating teams with a cash prize of INR 50,000.<br>
+												<B style="color:rgb(16, 125, 139)">SELECTION CRITERIA -</B> User Experience, User Interface, Device Support, Input Flexibility</p>
+												<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>
+												TECHNOLOGIES: Google DialogFlow, Google Firebase, NodeJS, Angular, TS, HTML, CSS <br>
+												LABELS: NLP, ML, Live Project, Client Management, Work Experience, Perseverance</p>
+										</article>
+										<article>
+											<a class="image"><img src="images/nlp.jpg" alt="" /></a>
+											<h3>Opinion Mining and Recommendation System<br> (Mar – July'2020)</h3>
+											<p>Project involving Natural Language Processing to analyse the positive-negative ratio of comments and recommend products. 
+												Includes sentiment analysis of Amazon reviews using NLTK and SciKitLearn. 
+											</p>
+											<B style="color:rgb(16, 125, 139)">SCOPE -</B>
+											<ol>
+												<li>Build an opinion mining model to segment customer reviews into positives and
+												negatives.</li> 
+												<li>Recommend the top products based on customer reviews.</li>
+											</ol>
+											Successfully built and trained the model to achieve a <B style="color:rgb(16, 125, 139)">91% accuracy</B>.<br><br>
+											<h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>
+											TECHNOLOGIES: Python, Pandas, Numpy, SciKitLearn <br>
+											LABELS: Regression, Classification, Predictive Modeling, Data Transformation, Optimization
+											</p>
 											<ul class="actions">												
-												<li><a href="https://github.com/pragya-datt/E-Commerce" class="button">GitHub Repository</a></li>
+												<li><a href="https://github.com/pragya-datt/nlp_system" class="button">GitHub Repository</a></li>
 											</ul>
 										</article>
 										<article>
-											<a class="image"><img src="images/rnd.jpg" alt="" /></a>
-											<h3>Feature Selection and Classification on Multi-label Learning <br> 
-												(Started Jan’2020, Ongoing)</h3>
-											<p>Exploring and devising a solution on: A novel graph-based multi-label feature
-												selection filter method via different centrality measures, filter/wrapper method based on
-												nature inspired optimization algorithms and multi-label classification model that can take
-												care of complex relationship between data and their labels.</p>
-												<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>LABELS: Optimization, Data Science, ML, R programming, Research</p>											
+											<a class="image"><img src="images/shop.jpg" alt="" /></a>
+											<h3>Full Functionality E-Commerce Store<br> (Jan – July’2020)</h3>
+											<p>Built a full functionality e-commerce store using the <B style="color:rgb(16, 125, 139)">MERN Stack</B> architecture also involving the task of web
+												scraping, including a user and an admin login system along with a payment gateway.</p>
+											<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>
+												TECHNOLOGIES: MongoDB, Express, React, NodeJS, UiPath, HTML, CSS, JS <br>
+												LABELS: Full Stack Development, Team Work, Research, Open to Challenges</p>
+											<ul class="actions">												
+												<li><a href="https://github.com/ishanjain126/eCommerce" class="button">GitHub Repository</a></li>
+											</ul>
 										</article>
 										<article>
-											<a class="image"><img src="images/chatbot.jpg" alt="" /></a>
-											<h3>Career Counselling Chatbot, Admizzionz Campuz® <br>
-												(Started Aug’2019, Ongoing)</h3>
-											<p>Proposed a chatbot solution to our client, Admizzionz Campuz®. The software
-												requirement specifications and system design document have been reviewed and agreed
-												upon. The chatbot is currently in its development phase.</p>
-												<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>TECHNOLOGIES: Google DialogFlow, JavaScript, Nebular<br>
-												LABELS: Client Management, Innovation, Target Oriented</p>
+											<a class="image"><img src="images/design.jpg" alt="" /></a>
+											<h3>Redesigned NIIT University's Website <br>(May – July’2020)</h3>
+											<p><B style="color:rgb(16, 125, 139)">CHALLENGE -</B> The condition was to use core HTML and CSS without any libraries and
+												come up with a redesigned version of the existing website. Successfully delivered and
+												received accolades for the same. Emphasized on a modern design, user experience,
+												accessibility and user interface.</p>
+											<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>
+												TECHNOLOGIES: Angular, HTML, CSS<br>
+												LABELS: Web Design, New Challenges, Target Oriented</p>
+											<ul class="actions">												
+												<li><a href="https://github.com/Shaurya1409/NU-Website" class="button">GitHub Repository</a></li>
+											</ul>
 										</article>
 										<article>
 											<a class="image"><img src="images/wire.jpg" alt="" /></a>
@@ -137,6 +171,16 @@
 											<ul class="actions">
 												<li><a href="https://github.com/pragya-datt/P2P" class="button">GitHub Repository</a></li>
 											</ul>
+										</article>
+										<article>
+											<a class="image"><img src="images/rnd.jpg" alt="" /></a>
+											<h3>Feature Selection and Classification on Multi-label Learning <br> 
+												(Jan - July’2020)</h3>
+											<p>Exploring and devising a solution on: A novel graph-based multi-label feature
+												selection filter method via different centrality measures, filter/wrapper method based on
+												nature inspired optimization algorithms and multi-label classification model that can take
+												care of complex relationship between data and their labels.</p>
+												<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>LABELS: Optimization, Data Science, ML, R programming, Research</p>											
 										</article>
 										<article>
 											<a class="image"><img src="images/led.jpg" alt="" /></a>
@@ -165,16 +209,7 @@
 												LABELS: Cretivity, Game Dev Experience
 											</p>
 										</article>
-										<article>
-											<a class="image"><img src="images/nlp.jpg" alt="" /></a>
-											<h3>Opinion Mining and Recommendation System<br> (Started Jan'2020, Ongoing)</h3>
-											<p>Project involving Natural Language Processing to analyse the positive-negative ratio of comments and recommend products. 
-												Includes sentiment analysis of tweets (collected using Tweepy) using NLTK and Alchemy API.
-											</p>
-											<p><h5 style="color:rgb(16, 125, 139)"><u>MY SKILLS</u></h5>TECHNOLOGIES: Python, Tweepy (Twitter API), NLTK library, IBM's Alchemy API<br>
-												LABELS: NLP, Sentiment Analysis, Data Extraction
-											</p>
-										</article>
+										<article><a href="https://github.com/pragya-datt" class="image"><img src="images/visit.jpg" alt="" /></a></article>
 									</div>
 								</section>
 								
@@ -239,7 +274,7 @@
 											<p>Bachelor of Technology (B.Tech), Computer Science &
 												Engineering + Data Science Specialization<br>NIIT University (2017-2021)
 											</p>
-											<H3 style="color:rgb(16, 125, 139)">CGPA: 9.12/10</H3>
+											<H3 style="color:rgb(16, 125, 139)">CGPA: 9.22/10</H3>
 										</article>
 										<article>
 											<p>XII (Senior Secondary), PCM + Economics
