--- a/highlights.html
+++ b/highlights.html
@@ -46,11 +46,10 @@
                                         GNSS data on Android smartphones. We cleared the university level 'internal hackathon' and proceeded 
                                         towards submitting our idea to ISRO. 
                                         Our solution proposal was shortlisted and we were amongst the top 10% of the teams 
-                                        to be selected, thereby going straight to the 'Grand Finale'. The grand finale however has been postponed 
-                                        due to the pandemic.
+                                        to be selected, thereby going straight to the 'Grand Finale'. 
                                     </p>
                                     <p>
-                                        TECHNOLOGIES: Java, Android Studio IDE, GNSS Logger, AnyChart, Android.location <br>
+                                        PROPOSED TECHNOLOGIES: Java, Android Studio IDE, GNSS Logger, AnyChart, Android.location <br>
                                         LABELS: Leadership, Strategic, Confidence, Extrovert                                        
                                     </p>
 
@@ -70,7 +69,7 @@
                                     </p>
 
                                     <p>
-                                        TECHNOLOGIES: Django, Python, Android Studio IDE, Java<br>
+                                        PROPOSED TECHNOLOGIES: Django, Python, Android Studio IDE, Java<br>
                                         LABELS: Innovation, Strategic, Presentation Skills
                                     </p>
 
